<resources>
    <string name="app_name">LoginRelative</string>
    <string name="login">Log in</string>
    <string name="email">Email Address</string>
    <string name="password">Password</string>
    <string name="or">Or</string>
    <string name="login_with_facebook">Login with Facebook</string>
    <string name="login_with_twitter">Login with Twitter</string>
    <string name="need_an_account">Need An Account?</string>
    <string name="sign_up_now">Sign Up Now</string>
</resources>
