<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/logo"
        android:layout_gravity="center"
        android:layout_centerHorizontal="true"
        />
    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="27sp"
        android:textStyle="bold"
        android:layout_below="@id/imgLogo"
        android:layout_centerHorizontal="true"
        />
    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:gravity="center"
        android:textSize="24sp"
        android:padding="10dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/edit_rounded_corners"
        android:layout_below="@id/tvLogin"
        />
    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:layout_marginTop="2dp"
        android:gravity="center"
        android:textSize="24sp"
        android:padding="10dp"
        android:background="@drawable/edit_rounded_corners"
        android:layout_marginHorizontal="15dp"
        android:layout_below="@id/edtEmail"
        />
    <TextView
        android:id="@+id/tvOr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:textAllCaps="true"
        android:layout_gravity="center"
        android:layout_below="@id/edtPassword"
        android:layout_centerHorizontal="true"
        />
    <TextView
        android:id="@+id/tvLoginWithFaceboook"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_with_facebook"
        android:background="@color/myBlue"
        android:textColor="@android:color/white"
        android:gravity="center"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="15dp"
        android:padding="10dp"
        android:layout_below="@id/tvOr"
        />
    <TextView
        android:id="@+id/tvLoginWithTwitter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_with_twitter"
        android:gravity="center"
        android:textColor="@android:color/white"
        android:background="@color/myLightBlue"
        android:textSize="20sp"
        android:layout_marginTop="15dp"
        android:layout_marginHorizontal="15dp"
        android:padding="10dp"
        android:layout_below="@id/tvLoginWithFaceboook"
        />
    <TextView
        android:id="@+id/tvNeedAnAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/need_an_account"
        android:layout_marginTop="40dp"
        android:textSize="20sp"
        android:textAllCaps="true"
        android:gravity="center"
        android:layout_below="@id/tvLoginWithTwitter"
        />
    <TextView
        android:id="@+id/tvSignUp"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_now"
        android:background="@color/myRed"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:paddingVertical="5dp"
        android:paddingHorizontal="40dp"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_below="@id/tvNeedAnAccount"
        android:layout_centerHorizontal="true"
        />


</RelativeLayout>